[package]
name = "running-in-container"
version = "0.0.1"
edition = "2021"
authors = ["Mihai Galos <mihaigalos@gmail.com>"]
description = "A library exporting one function to determine if application is running in a container or not."
categories = ["docker", "podman", "dockerenv"]
keywords = ["docker", "podman", "dockerenv"]
repository = "https://github.com/mihaigalos/running-in-container"
license = "MIT"
